--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
+        "less": "^3.12.2",
+        "less-loader": "^7.0.0",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "react": "^16.2.0",
@@ -23,5 +25,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "tailwindcss": "^1.7.5"
     }
 }
