--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
+        "react-router-dom": "^5.2.0",
         "tailwindcss": "^1.7.5"
     }
 }
